--- a/lab1/index.html
+++ b/lab1/index.html
@@ -4,3 +4,19 @@ Web
 class : 05
 age : 19
 university : hamma lakhder 
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>welcom to my site </h1>
+<h2>web </h2>
+<p>full name : ouissal nesri</p>
+<p>age : 19 </p>
+<p>class : 05</p>
+<p>universty : hamma lakhder</p>
+
+</body>
+</html>
