--- a/lab1/index.html
+++ b/lab1/index.html
@@ -20,3 +20,24 @@ university : hamma lakhder
 
 </body>
 </html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<h2 style="color:red"> web</h2>
+<p style= "color:green ; font-size:16px"> full name :</p>
+<p style="font-size:14px"> ouissal nesri</p>
+<p style= "color:green ; font-size:16px">
+age:</p>
+<p style="font-size:14px"> 19</p>
+<p style= "color:green ; font-size:16px">class:</p>
+<p style="font-size:14px">05</p>
+<p style= "color:green ; font-size:16px">
+univarsity</p>
+<p style="font-size:14px">hamma lakhder</p> 
+
+</body>
+</html>
