--- a/lab1/index.html
+++ b/lab1/index.html
@@ -20,24 +20,77 @@ university : hamma lakhder
 
 </body>
 </html>
+<!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
-</head>
-<body>
+    <meta charset="UTF-8">
+    <title>Lab1</title>
 
-<h1>This is a Heading</h1>
-<h2 style="color:red"> web</h2>
-<p style= "color:green ; font-size:16px"> full name :</p>
-<p style="font-size:14px"> ouissal nesri</p>
-<p style= "color:green ; font-size:16px">
-age:</p>
-<p style="font-size:14px"> 19</p>
-<p style= "color:green ; font-size:16px">class:</p>
-<p style="font-size:14px">05</p>
-<p style= "color:green ; font-size:16px">
-univarsity</p>
-<p style="font-size:14px">hamma lakhder</p> 
+    <style>
+        .style1 {
+            color: red;
+        }
+
+        .style2 {
+            color: green;
+            font-size: 16px;
+            font-weight: bold;
+            font-family: Cambria;
+        }
+        .style3 {
+            font-size: 14px;
+        }
+
+        .style4 {
+            width: 250px;
+            height: 250px;
+        }
+        .center {
+            text-align: center;
+        }
+        .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 40px;
+        }
+
+    </style>
+
+</head>
+
+<body>
+    <h1 class="center">Welcome to my Web Site</h1>
+    <h2 class="style1 center">Web Development (Lab1)</h2>
+    <div class="container">
+
+        <div>
+            <p>
+                <span class="style2">Full name:</span>
+                <span class="style3">wissal nesri</span>
+            </p>
+
+            <p>
+                <span class="style2">Age:</span>
+                <span class="style3">19 years old</span>
+            </p>
+
+            <p>
+                <span class="style2">Class:</span>
+                <span class="style3">2nd LMD computer Science</span>
+            </p>
+
+            <p>
+                <span class="style2">University:</span>
+                <span class="style3">University of EL OUED</span>
+            </p>
+        </div>
+
+        <div>
+            <img src="2a8b23d862c207cebbf08c2fd36cd3f7.jpg" class="style4" alt="My Image">
+        </div>
+
+    </div>
 
 </body>
 </html>
